--- a/src/components/Lists.module.css
+++ b/src/components/Lists.module.css
@@ -1,14 +1,13 @@
 .listBox {
     width: 658px;
-    height: auto;
-    padding: 1%;
+    height: 72px;
+    padding: 12px;
     margin: auto;
     margin-top: -124px;
 }    
 
 .taskItem {
     gap: 1rem;
-    
     background: (var(--gray-200));
     background-color: var(--gray-400);
     padding: 1rem;
@@ -17,7 +16,6 @@
     align-items: center;
     border-color: var(--gray-100);
     border-radius: 5px;
-    
 }
 
 .taskItem:first-child {
@@ -29,8 +27,9 @@
   }
 
 .selector {
-    font-size: 16px;
-    font-weight: bold;
+    font-size: 14px;
+    font-weight: 400; 
+    line-height: 1.4;
     color: (var(--gray-100));
     flex-grow: 1;
 }
@@ -39,8 +38,6 @@
     text-decoration: line-through;
     color: var(--gray-300) 
 }
-
-
 
 .listBox listContent {
     background: var(--gray-100);
@@ -67,10 +64,8 @@
 }
 
 .completedButton {
-    
     margin-right: 20px;
     cursor: pointer;
-   
 }
 
 .taskStatusCompleted {
@@ -82,7 +77,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
 }
 
 .taskStatusIncompleted {
@@ -92,12 +86,11 @@
     background-color: transparent;
     border-radius: 35px;
     border: 2px solid #4EA8DE;
-
 }
 
 .checkIcon {
-    color: #fff;   /* Cor do ícone de visto */
-    font-size: 13px; /* Ajuste o tamanho do ícone conforme necessário */
+    color: #fff;   
+    font-size: 13px; 
   }
 
   
