--- a/src/components/Tasks.module.css
+++ b/src/components/Tasks.module.css
@@ -5,45 +5,50 @@
     margin: 56px auto;
     width: 638px; 
     height: auto; 
+    font-family: 'Inter ', sans-serif;
+    font-size: 14px;
+    font-weight: 700; 
 }
 
 .created {
     color: #4ea8de;
     margin-right: auto;
-    font-size: small;
+    font-family: 'Inter ', sans-serif;
+    font-size: 14px;
+    font-weight: 700;
+    
 }
 
 .done {
     color: #8284f4;
-    margin-left: 32.5rem;
+    margin-left: 30.5rem;
     margin-top: -16px;
-    font-size: small;
+    font-family: 'Inter ', sans-serif;
+    font-size: 14px;
+    font-weight: 700;
 }
 
 .line {
-    width: 100%;
+    width: 99%;
     height: 0.1px;
     background-color: #262626;
     margin-top: 20px;
-    
 }
 
 .createdNumber {
     color: #f2f2f2;
     background-color: #444141;
-    border-radius: 50%;
+    border-radius: 40%;
     border: 4px;
     margin-left: 7px;
     padding: 2px 10px 2px;
-    
-    
 }
 
 .completedNumber {
     color: #f2f2f2;
     background-color: #444141;
     border: 4px;
-    border-radius: 45%;
+    border-radius: 40%;
     margin-left: 7px;
     padding: 2px 10px 2px;
 }
