--- a/src/global.css
+++ b/src/global.css
@@ -13,9 +13,6 @@
     --blue: #4EA8DE;
     --purple-dark: #5e60ce;
     --purple: #8284f4;
-
-    /*feedback*/
-    --danger: #e25858;
 }
 
 :focus {
@@ -35,7 +32,9 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
-body, input, textarea, button {
-    font-family: 'Inter', sans-serif;
-    font-weight: 1rem;
+textarea, button {
+    font-family: 'Inter ', sans-serif;
+    font-size: 16px;
+    font-weight: 400; 
+    line-height: 1.4;
 }
